[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
scraper = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
reqwest = "0.11.12"
